--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "firebase": "^7.8.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@mdi/font": "^4.9.95",
